# igus

./: .gitignore  Dinput.cpp  Dinput.h  Igus.ino  README.md  Umotor.cpp  Umotor.h  pyproject.toml  setup.cfg
Arduino/: Igus.ino  Umotor.cpp  Umotor.h
Arduino/Igus/: Igus.ino
STL/: TP_BASE_DROITE_02.STL  TP_BASE_GAUCHE_02.STL  TP_BUTEE_SWITCH_01.STL  TP_PLATEAU_01.STL
igus/: core.py
