[project]
authors = [
    {name = "Olivier Peria"},
    {name = "Christian Elmo", email = "christianelmo@gmail.com"}]
dependencies = [
    'pyserial >=3.5']

description = "Python module to control step motors"
name = "igus"
requires-python = ">= 3.9"
version = "0.1.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyserial = ">=3.5"
