[metadata]
name = igus
version = 0.0
description = IGUS : Linear Motion Device controlled by Arduino
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/symmehub/humerus_clausus/igus.git
author = Olivier Peria, Christian Elmo
author_email = christianelmo@gmail.com
license = GPL v3
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pyserial>=3.5
    setuptools>=65.6.3
python_requires = >=3.6


[options.packages.find]
exclude =
    Arduino*
    STL*
    Doc*
    test*
    testing*


